--- a/src/components/RestaurantDetailSection/index.css
+++ b/src/components/RestaurantDetailSection/index.css
@@ -33,10 +33,10 @@
 
 .restaurant-img {
   position: relative;
-  width: 221px;
-  height: 221px;
-  left: -68px;
-  top: -54px;
+  width:121px;
+  height: 121px;
+  left: -1\8px;
+  top: -7px;
   border-radius: 133.981px;
 }
 
@@ -123,7 +123,7 @@
 
 .food-items-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
 }
