--- a/src/components/FoodItemCard/index.css
+++ b/src/components/FoodItemCard/index.css
@@ -12,7 +12,6 @@
   transition: all 0.3s ease-in-out; /* Smooth hover transition */
 }
 
-
 /* Food Item Image */
 .food-img {
   width: 160px;
@@ -50,7 +49,7 @@
 .cost {
   font-size: 14px;
   font-weight: 500;
-  color: #52606D;
+  color: #52606d;
   margin-top: 5px;
 }
 
@@ -99,7 +98,7 @@
 .cart-quantity {
   font-size: 16px;
   font-weight: 600;
-  color: #52606D;
+  color: #52606d;
   margin: 0;
   padding: 0 8px;
 }
