--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -5,7 +5,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(135deg, #ff7f50, #ff6347); /* Gradient Background */
+  background: linear-gradient(
+    135deg,
+    #ff7f50,
+    #ff6347
+  ); /* Gradient Background */
   padding: 40px 20px;
   color: #ffffff;
 }
